--- a/ldw-exerc-01-lucas-do-nascimento-miura/views/produtos.html
+++ b/ldw-exerc-01-lucas-do-nascimento-miura/views/produtos.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h2 class="mb-4 text-white">Lista de Produtos</h2>
+<h2 class="mb-4">Lista de Produtos</h2>
 
 <form method="POST" class="d-flex gap-2 mb-4">
     <input type="text" name="nome" placeholder="Nome do Produto" required class="form-control">
