--- a/ldw-exerc-01-lucas-do-nascimento-miura/views/base.html
+++ b/ldw-exerc-01-lucas-do-nascimento-miura/views/base.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Miura Clothing</title>
-
-    <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-
-    <!-- CSS customizado -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-
-    <!-- Favicon -->
     <link rel="shortcut icon" href="{{ url_for('static', filename='imgs/favicon.png')}}" type="image/x-icon">
 </head>
+
+
 <body class="body-background d-flex flex-column min-vh-100">
 
     <!-- Navbar -->
@@ -32,6 +29,8 @@
         </div>
     </nav>
 
+    {% block fullwidth %}{% endblock %}
+
     <!-- Conteúdo principal -->
     <main class="flex-grow-1 container mt-4">
         {% block content %}{% endblock %}
@@ -39,7 +38,7 @@
 
     <!-- Footer -->
     <footer class="text-center mt-auto p-3 bg-dark text-white">
-        <p class="mb-0">Miura Clothing&reg; - 2024</p>
+        <p class="mb-0">Miura Clothing &reg; - 2025</p>
     </footer>
 
     <!-- JS -->
