--- a/ldw-exerc-01-lucas-do-nascimento-miura/views/clientes.html
+++ b/ldw-exerc-01-lucas-do-nascimento-miura/views/clientes.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h2 class="mb-4 text-white">Clientes</h2>
+<h2 class="mb-4">Clientes</h2>
 
 <form method="POST" class="row g-2 mb-4">
     <div class="col-md-3">
         <input type="text" name="nome" placeholder="Nome" required class="form-control">
     </div>
     <div class="col-md-3">
-        <input type="text" name="email" placeholder="Email" required class="form-control">
+        <input type="email" name="email" placeholder="Email" required class="form-control">
     </div>
     <div class="col-md-2">
         <input type="text" name="telefone" placeholder="Telefone" required class="form-control">
@@ -31,18 +31,20 @@
         </tr>
     </thead>
     <tbody>
-        {% for nome, dados in clientes.items() %}
-            <tr>
-                <td>{{ nome }}</td>
-                <td>{{ dados.email }}</td>
-                <td>{{ dados.telefone }}</td>
-                <td>{{ dados.cpf }}</td>
-            </tr>
+        {% if clientes %}
+            {% for cliente in clientes %}
+                <tr>
+                    <td>{{ cliente.nome }}</td>
+                    <td>{{ cliente.email }}</td>
+                    <td>{{ cliente.telefone }}</td>
+                    <td>{{ cliente.cpf }}</td>
+                </tr>
+            {% endfor %}
         {% else %}
             <tr>
                 <td colspan="4" class="text-muted text-center">Nenhum cliente cadastrado.</td>
             </tr>
-        {% endfor %}
+        {% endif %}
     </tbody>
 </table>
 {% endblock %}
