--- a/ldw-aula-04-crud-com-sqlite/views/base.html
+++ b/ldw-aula-04-crud-com-sqlite/views/base.html
@@ -8,10 +8,37 @@
     <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="{{url_for('home')}}">The Games</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="{{url_for('home')}}">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{url_for('games')}}">Games</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{url_for('newgame')}}">Novo Jogo</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{url_for('apigames')}}">API de Games</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{url_for('estoque')}}">Estoque de Jogos</a>
+            </li>
+            </ul>
+        </div>
+    </nav>
     <header> <h1 class="text-center">The Games</h1></header>
     {% block content %}
     <!-- aqui irá o bloco de conteudo -->
-   {%endblock content %}
-    <footer></footer>
+    {%endblock content %}
+    <footer>
+        <p class="text-center">Todos os direitos reservados &reg</p>
+    </footer>
 </body>
 </html>
