--- a/ldw-exerc-02-lucas-do-nascimento-miura/views/editcloth.html
+++ b/ldw-exerc-02-lucas-do-nascimento-miura/views/editcloth.html
@@ -23,6 +23,11 @@
                 </div>
 
                 <div class="mb-3">
+                    <label class="form-label">Quantidade</label>
+                    <input type="number" name="quantity" value="{{ cloth.quantity }}" class="form-control" required>
+                </div>
+
+                <div class="mb-3">
                     <label class="form-label">Imagem (URL)</label>
                     <input type="url" name="image" value="{{ cloth.image }}" class="form-control">
                 </div>
