--- a/ldw-exerc-02-lucas-do-nascimento-miura/views/estoque_clothes.html
+++ b/ldw-exerc-02-lucas-do-nascimento-miura/views/estoque_clothes.html
@@ -4,7 +4,7 @@
 <h2 class="text-center mt-4">Controle de Estoque - Streetwear</h2>
 <hr class="mb-4">
 
-<!-- Cadastro -->
+<!--------- Cadastro --------->
 <details class="mb-5">
     <summary class="fw-bold">[ Adicionar Roupa ]</summary>
     <div class="col-md-6 mt-3">
@@ -23,7 +23,7 @@
     </div>
 </details>
 
-<!-- Estoque em Cards -->
+<!--------- Estoque em Cards --------->
 <div class="row">
     {% for cloth in clothesEstoque %}
     <div class="col-md-4 mb-4">
