--- a/ldw-exerc-02-lucas-do-nascimento-miura/views/base.html
+++ b/ldw-exerc-02-lucas-do-nascimento-miura/views/base.html
@@ -13,7 +13,7 @@
 
 <body class="body-background d-flex flex-column min-vh-100">
 
-    <!-- Navbar -->
+    <!------------------------ Navbar ------------------------>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow">
         <div class="container-fluid">
             <a class="navbar-brand fw-bold" href="/">
@@ -39,17 +39,17 @@
 
     {% block fullwidth %}{% endblock %}
 
-    <!-- Conteúdo principal -->
+    <!----------- Conteúdo principal ----------->
     <main class="flex-grow-1 container mt-4">
         {% block content %}{% endblock %}
     </main>
 
-    <!-- Footer -->
+    <!---------------------- Footer ---------------------->
     <footer class="text-center mt-auto p-3 bg-dark text-white">
         <p class="mb-0">Miura Clothing &reg; - 2025</p>
     </footer>
 
-    <!-- JS -->
+    <!---------------------- JS ---------------------->
     <script src="{{ url_for('static', filename='javascript/script.js') }}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
