--- a/ldw-exerc-02-lucas-do-nascimento-miura/views/base.html
+++ b/ldw-exerc-02-lucas-do-nascimento-miura/views/base.html
@@ -40,8 +40,10 @@
     {% block fullwidth %}{% endblock %}
 
     <!----------- Conteúdo principal ----------->
-    <main class="flex-grow-1 container mt-4">
-        {% block content %}{% endblock %}
+    <main class="flex-grow-1">
+        <div class="content-wrapper py-5">
+            {% block content %}{% endblock %}
+        </div>
     </main>
 
     <!---------------------- Footer ---------------------->
